worked on makefile, rf, and crosstables

--- a/tables/postPredictors16.tex
+++ b/tables/postPredictors16.tex
@@ -1,5 +1,33 @@
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:11 2020
+% Sun Aug 09 14:18:55 2020
+\bigskip\bigskip
+\centering
+\begin{tabular}{rr}
+  \hline
+ & V1 \\ 
+  \hline
+0 & 434903 \\ 
+  1 & 565490 \\ 
+   \hline
+\end{tabular}
+\captionof{table}{female} 
+
+% latex table generated in R 4.0.1 by xtable 1.8-4 package
+% Sun Aug 09 14:18:55 2020
+\bigskip\bigskip
+\centering
+\begin{tabular}{rr}
+  \hline
+ & V1 \\ 
+  \hline
+0 & 565490 \\ 
+  1 & 434903 \\ 
+   \hline
+\end{tabular}
+\captionof{table}{male} 
+
+% latex table generated in R 4.0.1 by xtable 1.8-4 package
+% Sun Aug 09 14:18:56 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -13,7 +41,7 @@
 \captionof{table}{race-asian} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:12 2020
+% Sun Aug 09 14:18:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -27,7 +55,7 @@
 \captionof{table}{race-black} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:13 2020
+% Sun Aug 09 14:18:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -41,7 +69,7 @@
 \captionof{table}{race-nativeam} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:13 2020
+% Sun Aug 09 14:18:58 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -55,7 +83,7 @@
 \captionof{table}{race-aip} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:15 2020
+% Sun Aug 09 14:18:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -69,7 +97,7 @@
 \captionof{table}{race-white} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:16 2020
+% Sun Aug 09 14:18:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -83,7 +111,7 @@
 \captionof{table}{race-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:17 2020
+% Sun Aug 09 14:19:00 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -97,7 +125,7 @@
 \captionof{table}{hispanic-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:17 2020
+% Sun Aug 09 14:19:01 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -111,7 +139,7 @@
 \captionof{table}{hispanic-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:18 2020
+% Sun Aug 09 14:19:01 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -125,7 +153,7 @@
 \captionof{table}{hispanic-u} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:19 2020
+% Sun Aug 09 14:19:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -139,7 +167,7 @@ FALSE & 982612 \\
 \captionof{table}{CPT-plastic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:20 2020
+% Sun Aug 09 14:19:03 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -153,7 +181,7 @@ FALSE & 982612 \\
 \captionof{table}{inpatient} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:21 2020
+% Sun Aug 09 14:19:04 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -167,7 +195,7 @@ FALSE & 982612 \\
 \captionof{table}{outpatient} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:22 2020
+% Sun Aug 09 14:19:05 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -181,7 +209,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-acute} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:22 2020
+% Sun Aug 09 14:19:05 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -195,7 +223,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-not} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:23 2020
+% Sun Aug 09 14:19:06 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -209,7 +237,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-emerg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:24 2020
+% Sun Aug 09 14:19:07 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -223,7 +251,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-nurse} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:25 2020
+% Sun Aug 09 14:19:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -237,7 +265,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:25 2020
+% Sun Aug 09 14:19:08 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -251,7 +279,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:26 2020
+% Sun Aug 09 14:19:09 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -264,7 +292,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-acute2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:27 2020
+% Sun Aug 09 14:19:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -277,7 +305,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-chronic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:27 2020
+% Sun Aug 09 14:19:10 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -290,7 +318,7 @@ FALSE & 982612 \\
 \captionof{table}{trans-chronic-inter} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:29 2020
+% Sun Aug 09 14:19:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -304,7 +332,7 @@ FALSE & 982612 \\
 \captionof{table}{admit-year} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:30 2020
+% Sun Aug 09 14:19:12 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -317,7 +345,7 @@ FALSE & 982612 \\
 \captionof{table}{operation-year} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:31 2020
+% Sun Aug 09 14:19:13 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -331,7 +359,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-epi} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:32 2020
+% Sun Aug 09 14:19:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -345,7 +373,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-gen} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:32 2020
+% Sun Aug 09 14:19:14 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -359,7 +387,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-local} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:33 2020
+% Sun Aug 09 14:19:15 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -373,7 +401,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-iv} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:34 2020
+% Sun Aug 09 14:19:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -387,7 +415,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:35 2020
+% Sun Aug 09 14:19:16 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -401,7 +429,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:36 2020
+% Sun Aug 09 14:19:17 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -415,7 +443,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-reg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:40 2020
+% Sun Aug 09 14:19:17 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -429,7 +457,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-spine} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:40 2020
+% Sun Aug 09 14:19:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -443,7 +471,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-unk} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:41 2020
+% Sun Aug 09 14:19:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -456,7 +484,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-monitor} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:42 2020
+% Sun Aug 09 14:19:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -470,7 +498,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-gen} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:43 2020
+% Sun Aug 09 14:19:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -484,7 +512,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-epi} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:43 2020
+% Sun Aug 09 14:19:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -498,7 +526,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-spine} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:44 2020
+% Sun Aug 09 14:19:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -512,7 +540,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-reg} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:45 2020
+% Sun Aug 09 14:19:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -526,7 +554,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-local} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:46 2020
+% Sun Aug 09 14:19:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -540,7 +568,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-monitor-iv} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:46 2020
+% Sun Aug 09 14:19:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -554,7 +582,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-other} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:47 2020
+% Sun Aug 09 14:19:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -568,7 +596,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-multiple} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:48 2020
+% Sun Aug 09 14:19:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -582,7 +610,7 @@ FALSE & 982612 \\
 \captionof{table}{anesth-other-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:49 2020
+% Sun Aug 09 14:19:25 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -596,7 +624,7 @@ FALSE & 982612 \\
 \captionof{table}{surgery-plastic} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:50 2020
+% Sun Aug 09 14:19:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -610,7 +638,7 @@ FALSE & 982612 \\
 \captionof{table}{elective-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:50 2020
+% Sun Aug 09 14:19:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -624,7 +652,7 @@ FALSE & 982612 \\
 \captionof{table}{elective-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:51 2020
+% Sun Aug 09 14:19:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -638,7 +666,7 @@ FALSE & 982612 \\
 \captionof{table}{elective-u} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:55 2020
+% Sun Aug 09 14:19:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -652,7 +680,7 @@ FALSE & 982612 \\
 \captionof{table}{diabetes-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:55 2020
+% Sun Aug 09 14:19:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -666,7 +694,7 @@ FALSE & 982612 \\
 \captionof{table}{diabetes-insulin} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:56 2020
+% Sun Aug 09 14:19:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -680,7 +708,7 @@ FALSE & 982612 \\
 \captionof{table}{diabetes-noninsulin} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:57 2020
+% Sun Aug 09 14:19:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -694,7 +722,7 @@ FALSE & 982612 \\
 \captionof{table}{smoke-yes} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:58 2020
+% Sun Aug 09 14:19:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -708,7 +736,7 @@ FALSE & 982612 \\
 \captionof{table}{smoke-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:58 2020
+% Sun Aug 09 14:19:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -722,7 +750,7 @@ FALSE & 982612 \\
 \captionof{table}{dyspnea-rest} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:45:59 2020
+% Sun Aug 09 14:19:35 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -736,7 +764,7 @@ FALSE & 982612 \\
 \captionof{table}{dyspnea-moderate} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:00 2020
+% Sun Aug 09 14:19:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -750,7 +778,7 @@ FALSE & 982612 \\
 \captionof{table}{dyspnea-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:00 2020
+% Sun Aug 09 14:19:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -764,7 +792,7 @@ FALSE & 982612 \\
 \captionof{table}{functional-hs-independent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:01 2020
+% Sun Aug 09 14:19:37 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -778,7 +806,7 @@ FALSE & 982612 \\
 \captionof{table}{functional-hs-partially} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:02 2020
+% Sun Aug 09 14:19:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -792,7 +820,7 @@ FALSE & 982612 \\
 \captionof{table}{functional-hs-dependent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:02 2020
+% Sun Aug 09 14:19:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -806,7 +834,7 @@ FALSE & 982612 \\
 \captionof{table}{functional-hs-unknown} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:03 2020
+% Sun Aug 09 14:19:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -820,7 +848,7 @@ FALSE & 982612 \\
 \captionof{table}{ventilator-dependent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:04 2020
+% Sun Aug 09 14:19:40 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -834,7 +862,7 @@ FALSE & 982612 \\
 \captionof{table}{ventilator-independent} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:04 2020
+% Sun Aug 09 14:19:41 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -848,7 +876,7 @@ FALSE & 982612 \\
 \captionof{table}{history-COPD} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:05 2020
+% Sun Aug 09 14:19:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -862,7 +890,7 @@ FALSE & 982612 \\
 \captionof{table}{history-noCOPD} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:06 2020
+% Sun Aug 09 14:19:42 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -876,7 +904,7 @@ FALSE & 982612 \\
 \captionof{table}{ascites-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:07 2020
+% Sun Aug 09 14:19:43 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -890,7 +918,7 @@ FALSE & 982612 \\
 \captionof{table}{ascites-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:07 2020
+% Sun Aug 09 14:19:44 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -904,7 +932,7 @@ FALSE & 982612 \\
 \captionof{table}{CHF-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:08 2020
+% Sun Aug 09 14:19:45 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -918,7 +946,7 @@ FALSE & 982612 \\
 \captionof{table}{CHF-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:09 2020
+% Sun Aug 09 14:19:45 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -932,7 +960,7 @@ FALSE & 982612 \\
 \captionof{table}{Hyper-med-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:10 2020
+% Sun Aug 09 14:19:46 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -946,7 +974,7 @@ FALSE & 982612 \\
 \captionof{table}{Hyper-med-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:10 2020
+% Sun Aug 09 14:19:47 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -960,7 +988,7 @@ FALSE & 982612 \\
 \captionof{table}{Renal-fail-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:11 2020
+% Sun Aug 09 14:19:48 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -974,7 +1002,7 @@ FALSE & 982612 \\
 \captionof{table}{Renal-fail-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:12 2020
+% Sun Aug 09 14:19:48 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -988,7 +1016,7 @@ FALSE & 982612 \\
 \captionof{table}{Dialysis-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:13 2020
+% Sun Aug 09 14:19:49 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1002,7 +1030,7 @@ FALSE & 982612 \\
 \captionof{table}{Dialysis-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:14 2020
+% Sun Aug 09 14:19:50 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1016,7 +1044,7 @@ FALSE & 982612 \\
 \captionof{table}{Diss-cancer-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:15 2020
+% Sun Aug 09 14:19:51 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1030,7 +1058,7 @@ FALSE & 982612 \\
 \captionof{table}{Diss-cancer-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:15 2020
+% Sun Aug 09 14:19:51 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1044,7 +1072,7 @@ FALSE & 982612 \\
 \captionof{table}{Open-wound-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:16 2020
+% Sun Aug 09 14:19:52 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1058,7 +1086,7 @@ FALSE & 982612 \\
 \captionof{table}{Open-wound-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:17 2020
+% Sun Aug 09 14:19:53 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1072,7 +1100,7 @@ FALSE & 982612 \\
 \captionof{table}{Chronic-steroid-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:18 2020
+% Sun Aug 09 14:19:54 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1086,7 +1114,7 @@ FALSE & 982612 \\
 \captionof{table}{Chronic-steroid-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:19 2020
+% Sun Aug 09 14:19:55 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1100,7 +1128,7 @@ FALSE & 982612 \\
 \captionof{table}{Weight-loss-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:19 2020
+% Sun Aug 09 14:19:56 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1114,7 +1142,7 @@ FALSE & 982612 \\
 \captionof{table}{Weight-loss-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:20 2020
+% Sun Aug 09 14:19:57 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1128,7 +1156,7 @@ FALSE & 982612 \\
 \captionof{table}{Bleeding-dis-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:21 2020
+% Sun Aug 09 14:19:58 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1142,7 +1170,7 @@ FALSE & 982612 \\
 \captionof{table}{Bleeding-dis-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:21 2020
+% Sun Aug 09 14:19:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1156,7 +1184,7 @@ FALSE & 982612 \\
 \captionof{table}{Preop-transfusions-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:22 2020
+% Sun Aug 09 14:19:59 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1170,7 +1198,7 @@ FALSE & 982612 \\
 \captionof{table}{Preop-transfusions-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:23 2020
+% Sun Aug 09 14:20:00 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1184,7 +1212,7 @@ FALSE & 982612 \\
 \captionof{table}{Sepsis-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:24 2020
+% Sun Aug 09 14:20:01 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1198,7 +1226,7 @@ FALSE & 982612 \\
 \captionof{table}{Sepsis-sepsis} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:24 2020
+% Sun Aug 09 14:20:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1212,7 +1240,7 @@ FALSE & 982612 \\
 \captionof{table}{Sepsis-shock} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:25 2020
+% Sun Aug 09 14:20:02 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1226,7 +1254,7 @@ FALSE & 982612 \\
 \captionof{table}{Sepsis-sirs} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:38 2020
+% Sun Aug 09 14:20:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1240,7 +1268,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc1} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:39 2020
+% Sun Aug 09 14:20:18 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1254,7 +1282,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:40 2020
+% Sun Aug 09 14:20:19 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1268,7 +1296,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc3} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:40 2020
+% Sun Aug 09 14:20:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1282,7 +1310,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc4} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:41 2020
+% Sun Aug 09 14:20:20 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1296,7 +1324,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc5} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:41 2020
+% Sun Aug 09 14:20:21 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1310,7 +1338,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc6} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:42 2020
+% Sun Aug 09 14:20:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1324,7 +1352,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc7} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:43 2020
+% Sun Aug 09 14:20:22 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1338,7 +1366,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc8} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:43 2020
+% Sun Aug 09 14:20:23 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1352,7 +1380,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc9} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:44 2020
+% Sun Aug 09 14:20:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1366,7 +1394,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc10} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:45 2020
+% Sun Aug 09 14:20:24 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1389,7 +1417,7 @@ FALSE & 982612 \\
 \captionof{table}{other-proc-sum} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:45 2020
+% Sun Aug 09 14:20:25 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1403,7 +1431,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr1} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:46 2020
+% Sun Aug 09 14:20:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1417,7 +1445,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr2} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:46 2020
+% Sun Aug 09 14:20:26 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1431,7 +1459,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr3} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:47 2020
+% Sun Aug 09 14:20:27 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1445,7 +1473,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr4} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:48 2020
+% Sun Aug 09 14:20:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1459,7 +1487,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr5} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:48 2020
+% Sun Aug 09 14:20:28 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1473,7 +1501,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr6} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:49 2020
+% Sun Aug 09 14:20:29 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1487,7 +1515,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr7} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:49 2020
+% Sun Aug 09 14:20:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1501,7 +1529,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr8} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:50 2020
+% Sun Aug 09 14:20:30 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1515,7 +1543,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr9} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:51 2020
+% Sun Aug 09 14:20:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1529,7 +1557,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr10} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:51 2020
+% Sun Aug 09 14:20:31 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1552,7 +1580,7 @@ FALSE & 982612 \\
 \captionof{table}{concurr-sum} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:52 2020
+% Sun Aug 09 14:20:32 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1566,7 +1594,7 @@ FALSE & 982612 \\
 \captionof{table}{Emergency-y} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:53 2020
+% Sun Aug 09 14:20:33 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1580,7 +1608,7 @@ FALSE & 982612 \\
 \captionof{table}{Emergency-n} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:53 2020
+% Sun Aug 09 14:20:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1594,7 +1622,7 @@ FALSE & 982612 \\
 \captionof{table}{Wound-clean} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:54 2020
+% Sun Aug 09 14:20:34 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1608,7 +1636,7 @@ FALSE & 982612 \\
 \captionof{table}{Wound-clcontn} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:55 2020
+% Sun Aug 09 14:20:35 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1622,7 +1650,7 @@ FALSE & 982612 \\
 \captionof{table}{Wound-contn} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:55 2020
+% Sun Aug 09 14:20:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1636,7 +1664,7 @@ FALSE & 982612 \\
 \captionof{table}{Wound-dirty} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:56 2020
+% Sun Aug 09 14:20:36 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1650,7 +1678,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-no} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:57 2020
+% Sun Aug 09 14:20:37 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1664,7 +1692,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-mild} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:57 2020
+% Sun Aug 09 14:20:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1678,7 +1706,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-severe} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:58 2020
+% Sun Aug 09 14:20:38 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1692,7 +1720,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-life} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:59 2020
+% Sun Aug 09 14:20:39 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1706,7 +1734,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-moribund} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:46:59 2020
+% Sun Aug 09 14:20:40 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
@@ -1720,7 +1748,7 @@ FALSE & 982612 \\
 \captionof{table}{ASA-none} 
 
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 03 20:47:06 2020
+% Sun Aug 09 14:20:47 2020
 \bigskip\bigskip
 \centering
 \begin{tabular}{rr}
