all but 3 outcomes run

--- a/tables/plastics_AUC.tex
+++ b/tables/plastics_AUC.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Wed Aug 19 10:59:51 2020
+% Mon Aug 24 14:00:59 2020
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -14,6 +14,8 @@ Serious Complication & 0.69 & 0.67 & 0.71 \\
   Venous Thromboembolism & 0.56 & 0.59 & 0.64 \\ 
   Readmission & 0.68 & 0.65 & 0.68 \\ 
   Return to OR & 0.70 & 0.67 & 0.71 \\ 
+  Discharge to Nursing or Rehab Facility & 0.63 & 0.65 & 0.63 \\ 
+  Sepsis & 0.65 & 0.61 & 0.72 \\ 
    \hline
 \end{tabular}
 \caption{AUC by Model and Outcome for Plastic Surgery} 
