--- a/tables/plastics_AUC.tex
+++ b/tables/plastics_AUC.tex
@@ -1,21 +1,21 @@
 % latex table generated in R 4.0.1 by xtable 1.8-4 package
-% Mon Aug 24 14:00:59 2020
+% Wed Sep 09 13:41:34 2020
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrr}
+\begin{tabular}{rrrrr}
   \hline
- & rf & ff & logit \\ 
+ & rf & ff & logit & NSQIPlogit \\ 
   \hline
-Serious Complication & 0.69 & 0.67 & 0.71 \\ 
-  Any Complication & 0.67 & 0.65 & 0.69 \\ 
-  Pneumonia & 0.63 & 0.62 & 0.56 \\ 
-  Surgical Site Infection & 0.65 & 0.64 & 0.67 \\ 
-  Urinary Tract Infection & 0.60 & 0.62 & 0.55 \\ 
-  Venous Thromboembolism & 0.56 & 0.59 & 0.64 \\ 
-  Readmission & 0.68 & 0.65 & 0.68 \\ 
-  Return to OR & 0.70 & 0.67 & 0.71 \\ 
-  Discharge to Nursing or Rehab Facility & 0.63 & 0.65 & 0.63 \\ 
-  Sepsis & 0.65 & 0.61 & 0.72 \\ 
+Serious Complication & 0.69 & 0.67 & 0.71 & 0.62 \\ 
+  Any Complication & 0.67 & 0.65 & 0.69 & 0.61 \\ 
+  Pneumonia & 0.63 & 0.62 & 0.56 & 0.51 \\ 
+  Surgical Site Infection & 0.65 & 0.64 & 0.67 & 0.62 \\ 
+  Urinary Tract Infection & 0.60 & 0.62 & 0.55 & 0.51 \\ 
+  Venous Thromboembolism & 0.56 & 0.59 & 0.64 & 0.52 \\ 
+  Readmission & 0.68 & 0.65 & 0.68 & 0.65 \\ 
+  Return to OR & 0.70 & 0.67 & 0.71 & 0.62 \\ 
+  Discharge to Nursing or Rehab Facility & 0.63 & 0.65 & 0.63 & 0.50 \\ 
+  Sepsis & 0.65 & 0.61 & 0.72 & 0.50 \\ 
    \hline
 \end{tabular}
 \caption{AUC by Model and Outcome for Plastic Surgery} 
